log
Wed 24 Apr 2024 07:53:58 PM UTC: 
 tests:  0|6
total_score: 0/70
9c4bd6d
Wed 24 Apr 2024 08:06:54 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:10: error: unused variable ‘mapa’ [-Werror=unused-variable]
   43 | HashMap* mapa = (HashMap *) map;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
ec69989
Wed 24 Apr 2024 08:22:05 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
a8a302e
Wed 24 Apr 2024 08:26:48 PM UTC: 
 hashmap.c | 20 ++++++++++++++++----
 1 file changed, 16 insertions(+), 4 deletions(-)
 tests:  2|5
total_score: 20/70
b571855
Wed 24 Apr 2024 08:44:35 PM UTC: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
1ddae53
Wed 24 Apr 2024 08:49:30 PM UTC: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  5|4
total_score: 30/70
6e47802
